--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@ TWILIO_TWIML_APP_SID=APXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 # https://www.twilio.com/console/project/api-keys
 TWILIO_API_KEY=SKXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 TWILIO_API_SECRET=XXXXXXXXXXXXXXXXX
+
+TWILIO_CLIENT_NAME=
