--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "eslint": "^7.29.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.4.0",
     "jest": "^27.0.5",
     "prettier": "2.3.1"
   }
