--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Quick Start application template for Twilio Voice JavaScript SDK on Node.js",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "PORT=3001 node index.js",
     "eslint": "./node_modules/.bin/eslint .",
     "test": "./node_modules/.bin/jest"
   },
